--- a/OldRecipeAppGUI/App.xaml
+++ b/OldRecipeAppGUI/App.xaml
@@ -1,7 +1,7 @@
-﻿<Application x:Class="RecipeGUI.App"
+﻿<Application x:Class="RecipeAppGUI.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:RecipeGUI"
+             xmlns:local="clr-namespace:RecipeAppGUI"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
          
